--- a/kalaloadingpage/src/App.css
+++ b/kalaloadingpage/src/App.css
@@ -1,38 +1,40 @@
 .App {
   text-align: center;
+  background-image: url(background.jpg);
+  background-size: cover;
+  overflow: hidden;
+  color: #FFFFFF;
+  margin-bottom: 0px;
+  height:100vh;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.Logo {
+  margin: auto;
+  padding: 30px;
+  width: 250px;
+  max-width: 40%;
+  height: auto;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+
+
+.middle {
+  margin-left: 10%;
+  margin-top: 8%;
+  margin-right: 10%;
+  font-size: 1.5em;
+  left: 50%;
+  top: 50%;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.p {
+  margin-top: 1%;
 }
 
-.App-link {
-  color: #61dafb;
+.form {
+  margin-top: 10%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.social {
+  margin-top: 8%;
 }
