--- a/kalaloadingpage/src/App.css
+++ b/kalaloadingpage/src/App.css
@@ -2,6 +2,7 @@
   text-align: center;
   background-image: url(background.jpg);
   background-size: cover;
+  overflow: hidden;
   color: #FFFFFF;
   margin-bottom: 0px;
   height:100vh;
