--- a/kalaloadingpage/src/App.css
+++ b/kalaloadingpage/src/App.css
@@ -14,58 +14,77 @@
   font-stretch: extra-condensed;
 }
 
+.Animation {
+  width : 100%;
+  position: absolute;
+  left: 37vw;
+  top: 10vh;
+}
+
+.Message {
+  position: absolute;
+  top: 28vh;
+  width: 100%;
+}
 .loading:after {
-  overflow: hidden;
-  display: inline-block;
-  vertical-align: bottom;
-  -webkit-animation: ellipsis steps(4,end) 900ms infinite;
-  animation: ellipsis steps(4,end) 900ms infinite;
-  content: "\2026"; /* ascii code for the ellipsis character */
-  width: 0px;
+  content: ' .';
+  animation: dots 1s steps(5, end) infinite;
 }
 
-@keyframes ellipsis {
-  to {
-    width: 20px;
-  }
-}
-
-@-webkit-keyframes ellipsis {
-  to {
-    width: 20px;
-  }
-}
+@keyframes dots {
+  0%, 20% {
+    color: rgba(0,0,0,0);
+    text-shadow:
+      .25em 0 0 rgba(0,0,0,0),
+      .5em 0 0 rgba(0,0,0,0);}
+  40% {
+    color: white;
+    text-shadow:
+      .25em 0 0 rgba(0,0,0,0),
+      .5em 0 0 rgba(0,0,0,0);}
+  60% {
+    text-shadow:
+      .25em 0 0 white,
+      .5em 0 0 rgba(0,0,0,0);}
+  80%, 100% {
+    text-shadow:
+      .25em 0 0 white,
+      .5em 0 0 white;}}
 
 .Logo {
   margin: auto;
-  padding-top: 30px;
-  padding-left: 30px;
-  padding-right: 30px;
-  padding-bottom:15px;
+  padding-top: 2vh;
   width: 250px;
-  max-width: 50%;
+  max-width: 20vh;
   height: auto;
 }
 
-
-
 .middle {
-  margin-left: 10%;
-  margin-top: 10vh;
-  margin-right: 10%;
+  position: absolute;
   font-size: 1em;
-  left: 50%;
-  top: 50%;
+  top: 54vh;
+  width: 100%;
 }
 
 .form {
-  margin-top: 3%;
+  position: absolute;
+  top:60vh;
+  width:100%;
+}
+
+.small {
+  position: absolute;
+  top: 66.5vh;
+  width: 100%;
 }
 
 .social {
-  margin-top: 10vh;
+  position: absolute;
+  width: 100%;
+  bottom: 2.5vh;
 }
 
 .slogan {
   font-size: 1.2em;
 }
+
